--- a/client/src/components/Questions/SingleQuestion.css
+++ b/client/src/components/Questions/SingleQuestion.css
@@ -8,8 +8,8 @@
 	margin-bottom: 5rem;
 }
 
-.rounded-table {
-	border-radius: 20px 20px 0px 0px;
+.roundedcustom {
+	border-radius: 10px;
 }
 
 .right {
@@ -18,6 +18,5 @@
 }
 
 .custom-width {
-	width: 7rem;
-	margin: 2px;
+	width: 6rem;
 }
