--- a/client/src/components/Questions/SingleQuestion.css
+++ b/client/src/components/Questions/SingleQuestion.css
@@ -20,3 +20,12 @@
 .custom-width {
 	width: 6rem;
 }
+.custom-button {
+	display: flex;
+	height: 25px;
+	padding: 0 10px 15px 10px;
+	padding-top: 1px;
+	padding-right: 12px;
+	font-size: 15px;
+	margin-right: 10px;
+}
