--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -6,3 +6,15 @@
 	margin-right: auto;
 	min-height: 1.9em;
 }
+
+.nav-backg {
+	background-color: #29196c;
+	background-image: radial-gradient(
+			at 80% 0%,
+			hsla(248, 100%, 7%, 1) 0,
+			transparent 50%
+		),
+		radial-gradient(at 51% 51%, hsla(253, 100%, 27%, 1) 0, transparent 50%),
+		radial-gradient(at 0% 100%, hsla(258, 64%, 18%, 1) 0, transparent 50%),
+		radial-gradient(at 80% 100%, hsla(264, 78%, 14%, 1) 0, transparent 50%);
+}
