--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,3 +6,11 @@
 	position: 'relative';
 	min-height: '100vh';
 }
+
+.global-bg {
+	background-image: url('./assets/bg.png');
+	background-attachment: fixed;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+}
