--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -8,13 +8,11 @@
 }
 
 .nav-backg {
-	background-color: #29196c;
-	background-image: radial-gradient(
-			at 80% 0%,
-			hsla(248, 100%, 7%, 1) 0,
-			transparent 50%
-		),
-		radial-gradient(at 51% 51%, hsla(253, 100%, 27%, 1) 0, transparent 50%),
-		radial-gradient(at 0% 100%, hsla(258, 64%, 18%, 1) 0, transparent 50%),
-		radial-gradient(at 80% 100%, hsla(264, 78%, 14%, 1) 0, transparent 50%);
+	/* From https://css.glass */
+	background: rgba(155, 195, 233, 0.35);
+	border-radius: 0 0 16px 16px;
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(7.4px);
+	-webkit-backdrop-filter: blur(7.4px);
+	border: 1px solid rgba(155, 195, 233, 0.25);
 }
