--- a/client/src/components/Questions/SingleQuestion.css
+++ b/client/src/components/Questions/SingleQuestion.css
@@ -51,6 +51,19 @@
 		rgba(93, 13, 86, 0.4) 100%
 	);
 }
+.glass-comments {
+	color: white;
+	border: none;
+	background: rgb(11, 86, 106);
+	padding: 1rem;
+	border-radius: 1rem;
+	background: linear-gradient(
+		90deg,
+		rgba(11, 86, 106, 0.4) 0%,
+		rgba(20, 19, 115, 0.4) 65%,
+		rgba(93, 13, 86, 0.4) 100%
+	);
+}
 
 @media (max-width: 600px) {
 	.res {
