--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -4,4 +4,11 @@
 	width: 100%;
 	height: 20rem;
 	margin-bottom: -200px;
+	/* From https://css.glass */
+	background: rgb(32, 3, 65);
+
+	box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+	backdrop-filter: blur(12.7px);
+	-webkit-backdrop-filter: blur(12.7px);
+	border: 1px solid rgba(86, 19, 161, 0.3);
 }
