--- a/client/src/components/MostActiveUsers/mau.css
+++ b/client/src/components/MostActiveUsers/mau.css
@@ -15,3 +15,18 @@
 	margin-top: 20px;
 	border: 1px solid rgba(255, 255, 255, 0.2);
 }
+
+.card-text-glass {
+	color: white;
+	border: none;
+	background: rgb(11, 86, 106);
+	padding: 1rem;
+	border-radius: 1rem;
+	background: linear-gradient(
+		90deg,
+		rgba(11, 86, 106, 0.4) 0%,
+		rgba(20, 19, 115, 0.4) 65%,
+		rgba(93, 13, 86, 0.4) 100%
+	);
+	border: 1px solid rgba(255, 255, 255, 0.1);
+}
