--- a/client/src/components/Questions/SingleQuestion.css
+++ b/client/src/components/Questions/SingleQuestion.css
@@ -28,6 +28,7 @@
 	width: 6rem;
 }
 .custom-button {
+	transition: 0.5s ease-in-out;
 	display: flex;
 	height: 25px;
 	padding: 0 10px 15px 10px;
@@ -35,6 +36,15 @@
 	padding-right: 12px;
 	font-size: 15px;
 	margin-right: 10px;
+	text-decoration: none;
+	border-radius: 10px;
+	background-color: rgba(255, 255, 255, 0.1);
+	border: 1px solid rgba(255, 255, 255, 0.1);
+	backdrop-filter: blur(30px);
+	color: rgba(255, 255, 255, 0.8);
+	cursor: pointer;
+	text-transform: uppercase;
+	transition: 0.5s ease-in-out;
 }
 
 .card-bg {
@@ -102,4 +112,61 @@
 	.res {
 		width: 98.5% !important;
 	}
+}
+
+.glass-button {
+	display: inline-block;
+	margin-right: 1rem;
+
+	padding: 10px;
+	border: 0;
+	text-decoration: none;
+	border-radius: 10px;
+	background-color: rgba(255, 255, 255, 0.1);
+	border: 1px solid rgba(255, 255, 255, 0.1);
+	backdrop-filter: blur(30px);
+	color: rgba(255, 255, 255, 0.8);
+	cursor: pointer;
+	text-transform: uppercase;
+	transition: 0.5s ease-in-out;
+}
+
+.glass-button-danger {
+	display: inline-block;
+	padding: 10px;
+	border: 0;
+	margin-right: 1rem;
+	text-decoration: none;
+	border-radius: 10px;
+	background-color: rgba(221, 46, 66, 0.5);
+	border: 1px solid rgba(255, 255, 255, 0.1);
+	backdrop-filter: blur(30px);
+	color: rgba(255, 255, 255, 0.8);
+	cursor: pointer;
+	text-transform: uppercase;
+	transition: 0.5s ease-in-out;
+}
+
+.glass-button:hover {
+	color: rgba(255, 255, 255, 0.9);
+	text-decoration: none;
+	transition: 0.5s ease-in-out;
+	background-color: rgba(255, 255, 255, 0.2);
+}
+
+.glass-button-danger:hover {
+	background-color: rgba(185, 17, 37, 0.8);
+	text-decoration: none;
+	transition: 0.5s ease-in-out;
+}
+
+.custom-button:hover {
+	transition: 0.5s ease-in-out;
+	box-shadow: inset 0 0 50px #fff, /* inner white */ inset 20px 0 80px #f0f,
+		/* inner left magenta short */ inset -20px 0 80px #0ff,
+		/* inner right cyan short */ inset 20px 0 100px #f0f,
+		/* inner left magenta broad */ inset -20px 0 100px #0ff,
+		/* inner right cyan broad */ 0 0 20px #fff,
+		/* outer white */ -10px 0 80px #f0f,
+		/* outer left magenta */ 10px 0 80px #0ff; /* outer right cyan */
 }
