--- a/client/src/pages/Register/register.css
+++ b/client/src/pages/Register/register.css
@@ -37,3 +37,19 @@
 	height: 4rem;
 	color: white;
 }
+
+.glass-button-register {
+	width: 100%;
+	outline: 0;
+	border: 0;
+	padding: 1rem;
+	border-radius: 15px;
+	background-color: rgba(10, 101, 254, 0.3);
+	color: white;
+	border: 1px solid rgba(255, 255, 255, 0.2);
+	transition: 0.5s ease-in-out;
+}
+.glass-button-register:hover {
+	transition: 0.5s ease-in-out;
+	background-color: rgba(10, 101, 254, 0.5);
+}
