--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -15,4 +15,5 @@
 	backdrop-filter: blur(7.4px);
 	-webkit-backdrop-filter: blur(7.4px);
 	border: 1px solid rgba(155, 195, 233, 0.25);
+	text-decoration: none;
 }
