--- a/client/src/components/Navbar/navbar.css
+++ b/client/src/components/Navbar/navbar.css
@@ -17,3 +17,28 @@
 	border: 1px solid rgba(155, 195, 233, 0.25);
 	text-decoration: none;
 }
+
+.right {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	margin-left: auto;
+	color: white;
+}
+
+.right li {
+	width: 100px;
+}
+
+@media screen and (max-width: 768px) {
+	.right {
+		position: relative;
+		top: 0;
+		right: 0;
+		margin-left: 0;
+	}
+
+	.right li {
+		width: 1000%;
+	}
+}
