--- a/client/src/App.css
+++ b/client/src/App.css
@@ -22,5 +22,8 @@
 }
 ::-webkit-scrollbar-thumb {
 	border-radius: 10px;
-	background-color: rgb(149, 150, 169, 0.5);
+	background: rgba(255, 255, 255, 0.21);
+	backdrop-filter: blur(12.7px);
+	-webkit-backdrop-filter: blur(12.7px);
+	border: 0.5px solid rgba(255, 255, 255, 0.2);
 }
