--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,7 +8,7 @@
 }
 
 .global-bg {
-	background-image: url('./assets/bg.png');
+	background-image: url('./assets/bg.webp');
 	background-attachment: fixed;
 	background-position: center;
 	background-repeat: no-repeat;
