--- a/client/src/components/Comments/Comment.css
+++ b/client/src/components/Comments/Comment.css
@@ -1,5 +1,35 @@
 .cstm {
-	padding: 3px;
-	width: 50px;
+	outline: 0;
+	border: 0;
+	padding: 1rem;
+	border-radius: 15px;
+	background-color: rgba(10, 101, 254, 0.3);
+	color: white;
+	border: 1px solid rgba(255, 255, 255, 0.2);
+	transition: 0.5s ease-in-out;
 	margin-right: 10px;
+}
+.cstm:hover {
+	transition: 0.5s ease-in-out;
+	background-color: rgba(10, 101, 254, 0.5);
+}
+
+.cstmdngr {
+	display: inline-block;
+	padding: 10px;
+	border: 0;
+	margin-right: 1rem;
+	text-decoration: none;
+	border-radius: 10px;
+	background-color: rgba(221, 46, 66, 0.5);
+	border: 1px solid rgba(255, 255, 255, 0.1);
+	backdrop-filter: blur(30px);
+	color: rgba(255, 255, 255, 0.8);
+	cursor: pointer;
+	text-transform: uppercase;
+	transition: 0.5s ease-in-out;
+}
+.cstmdngr:hover {
+	transition: 0.5s ease-in-out;
+	background-color: rgba(221, 46, 66, 0.9);
 }
